--- a/views/subscribe.html
+++ b/views/subscribe.html
@@ -6,78 +6,101 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <!-- Bootstrap CDN -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <!-- jQuery -->
-    <script
-    src="https://code.jquery.com/jquery-3.4.1.min.js"
-    integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
-    crossorigin="anonymous"></script>
+    <link href="https://fonts.googleapis.com/css?family=Nunito:400,700,900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="styles/subscribe.css">
     <!-- Bootstrap JS -->
+    <script defer
+  src="https://code.jquery.com/jquery-3.4.1.min.js"
+  integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
+  crossorigin="anonymous"></script>
     <script defer src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script defer src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     <script defer src="/scripts/app.js"></script>
-
-    <link rel="stylesheet" href="styles/subscribe.css">
-    <title>Document</title>
+    <title>Subscription</title>
 </head>
 <body>
-    <h1>Subscription</h1>
-    <div class="form">
-        <form>
-            <div class="row">
-                <div class="col-md-6 mb-3">
-                <label for="firstName">First name</label>
-                <input type="text" class="form-control" id="firstName" placeholder="Special characters are not accepted" value="" required="">
-                <div class="invalid-feedback">
-                    Invalid first name.
-                </div>
-                </div>
-                <div class="col-md-6 mb-3">
-                <label for="lastName">Last name</label>
-                <input type="text" class="form-control" id="lastName" placeholder="Special characters are not accepted" value="" required="">
-                <div class="invalid-feedback">
-                    Invalid last name.
-                </div>
-                </div>
-            </div>
-            <div class="mb-3">
-                <label for="email">Email</label>
-                <input type="email" class="form-control" id="email" placeholder="you@example.com">
-                <div class="invalid-feedback">
-                Invalid email address.
-                </div>
-            </div>
-            <div>
-                <h4>Select your subscription(s)</h4>
-                <ul id="subscriptions" class="form-control">
-                    <button class="subscription-button">Books</button>
-                    <button class="subscription-button">Fiction</button>
-                    <button class="subscription-button">Non-Fiction</button>
-                
-​
-                    <button class="subscription-button">Gothic</button>
-                    <button class="subscription-button">Halloween</button>
-                    <button class="subscription-button">Movies</button>
-​
-​
-                    <button class="subscription-button">Novels</button>
-                    <button class="subscription-button">Tv Shows</button>
-                    <button class="subscription-button">Religion</button>
-                </ul>
-​
-                <div class="invalid-feedback">
-                        Select at least one topic.
-                </div>
-            </div>
-​
-            <div class="d-block my-3">
-                    <h4 class="mb-3">Newsletter's Frequency</h4>
-                    <ul>
-                        <button id="daily" class="frequency-button selected">Daily</button>
-                        <button id="weekly" class="frequency-button">Weekly</button>
-                        <button id="monthly" class="frequency-button">Monthly</button>
+    <header>
+        <div>
+            <img id="header-img" src="/images/vampireCopy.png" alt="vampire">
+        </div>
+    </header>
+    <hr size="90">
+    <main>
+        <h1>Subscription</h1>
+        <div class="form">
+            <form>
+                <div>
+                    <h4>Select your meet up topic.</h4>
+                    <ul class="subscriptions">
+                        <button class="subscription-button">Books</button>
+                        <button class="subscription-button">Fiction</button>
+                        <button class="subscription-button">Gender</button>
                     </ul>
-            <button class="btn btn-primary btn-lg btn-block" id="submit" type="submit">Submit</button>
-        </form>
-    </div>
+                    <ul class="subscriptions">
+                        <button class="subscription-button">Gothic</button>
+                        <button class="subscription-button">Halloween</button>
+                        <button class="subscription-button">Movies</button>
+                    </ul>
+                    <ul class="subscriptions">
+                        <button class="subscription-button">Novels</button>
+                        <button class="subscription-button">Tv Shows</button>
+                        <button class="subscription-button">Religion</button>
+                    </ul>
+
+                    <div class="invalid-feedback">
+                            Select at least one topic.
+                    </div>
+                </div>
+                <h4 class="mb-3">Newsletter's Frequency:</h4>
+                <div class="my-3">
+                        <div>
+                            <button id="daily" class="frequency-button selected">Daily</button>
+                            <button id="weekly" class="frequency-button">Weekly</button>
+                            <button id="monthly" class="frequency-button">Monthly</button>
+                        </div>
+                </div>
+                        <div class="row">
+                                <div class="col-md-6 mb-3">
+                                    <label for="firstName">First name</label>
+                                    <input type="text" class="form-control" id="firstName" placeholder="Special characters are not accepted" value="" required="">
+                                    <div class="invalid-feedback">
+                                        Invalid first name.
+                                    </div>
+                                </div>
+                                <div class="col-md-6 mb-3">
+                                    <label for="lastName">Last name</label>
+                                    <input type="text" class="form-control" id="lastName" placeholder="Special characters are not accepted" value="" required="">
+                                    <div class="invalid-feedback">
+                                        Invalid last name.
+                                    </div>
+                                </div>
+                                <div class="col-md-6 mb-3">
+                                    <label for="email">Email</label>
+                                    <input type="email" class="form-control" id="email" placeholder="you@example.com">
+                                    <div class="invalid-feedback">
+                                    Invalid email address.
+                                    </div>
+                                </div>
+                            </div>
+                <button class="btn btn-primary btn-lg btn-block" id="submit" type="submit">Submit</button>
+            </form>
+    </main>
+     <!-- Modal -->
+     <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal-dialog" role="document">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <h5 class="modal-title" id="exampleModalLabel">Thank You!</h5>
+                  <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                  </button>
+                </div>
+                <div class="modal-body text-center">
+                 <img src="/images/vampireCopy.png" alt="vampire">
+                 <p>We're excited to send you your newsletters about our Vampire Enthusiast Meetups!</p>
+                </div>
+              </div>
+            </div>
+          </div>
 </body>
 </html>
