--- a/views/owner.html
+++ b/views/owner.html
@@ -18,7 +18,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>hello</h1>
+    <h1>Customer Data</h1>
     <table class="table">
       <thead>
         <tr>
